remctl (3.11-1) UNRELEASED; urgency=medium

  * New upstream release.
    - Port to PHP 7.  (Closes: #821713)
  * Switch to the DEP-14 branch layout and update debian/gbp.conf and
    Vcs-Git accordingly.

 -- Russ Allbery <rra@debian.org>  Sat, 07 May 2016 14:39:15 -0700

remctl (3.10-1) unstable; urgency=medium

  * New upstream release.
    - New server ACLs anyuser:auth and anyuser:anonymous.  The latter
      allows access by anonymous clients if the KDC supports anonymous
      service tickets.
    - Server now sets the REMOTE_EXPIRES environment variable to the time
      when the client credentials would expire.
    - Anonymous users no longer satisfy ANYUSER (anyuser:auth).
    - Simplify the Python RemctlError class (with some backward
      incompatibilities).
    - Dynamically resize the buffer used for the localgroup ACL scheme,
      allowing support of users in large numbers of local groups.

 -- Russ Allbery <rra@debian.org>  Fri, 27 Nov 2015 15:24:56 -0800

remctl (3.9-2) unstable; urgency=medium

  * Build against libsystemd instead of libsystemd-daemon.  Thanks,
    Michael Biebl.  (Closes: #779764)
  * Add explicit build dependency on libmodule-build-perl, since it will
    soon no longer be provided by the perl package.  (Closes: #791666)
  * Add debian/gbp.conf reflecting the branch layout of the default
    packaging repository.
  * Refresh upstream signing key.
  * Update standards version to 3.9.6 (no changes required).

 -- Russ Allbery <rra@debian.org>  Sat, 08 Aug 2015 11:16:49 -0700

remctl (3.9-1) unstable; urgency=medium

  * New upstream release.
    - New server ACL type, localgroup, which converts the principal to a
      local username and then checks for membership in a local group.
    - Fix incorrect handling of interruptions of network writes by signals
      in the server.
    - Prefer calloc and reallocarray when allocating memory with
      multiplication.
    - Restore the SIGPIPE handler before running a command.