@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
 Build-Depends: debhelper (>= 9),
  dh-autoreconf,
+ dh-php,
  dpkg-dev (>= 1.14.9),
  gem2deb (>= 0.4.1~),
  krb5-config,
@@ -19,8 +20,8 @@ Build-Depends: debhelper (>= 9),
  libtest-strict-perl,
  libtest-synopsis-perl,
  perl,
- php5-cli,
- php5-dev,
+ php-cli,
+ php-dev,
  pkg-config,
  python-all-dev
 XS-Python-Version: >= 2.6
@@ -111,10 +112,11 @@ Description: Perl client for Kerberos-authenticated command execution
  Net::Remctl::Backend module, which assists in writing remctl backends in
  Perl.
 
-Package: php5-remctl
+Package: php-remctl
 Section: php
 Architecture: any
 Depends: ${shlibs:Depends}, ${php:Depends}, ${misc:Depends}
+Provides: php7.0-remctl
 Description: PECL module for Kerberos-authenticated command execution
  remctl is a client/server protocol for executing specific commands on a
  remote system with Kerberos authentication.  The allowable commands must
@@ -123,7 +125,7 @@ Description: PECL module for Kerberos-authenticated command execution
  associated with an ACL containing a list of Kerberos principals
  authorized to run that command.
  .
- This package contains the PECL remctl module for PHP 5, which provides
+ This package contains the PECL remctl module for PHP 7, which provides
  native PHP bindings for the libremctl client library.
 
 Package: python-remctl
